test/errors/python_generator_error/zs/generated_symbols/template_invalid_property_name_private_error.zs
package generated_symbols.template_invalid_property_name_private_error;

struct TemplatedStruct<T>
{
    T _field;
};

instantiate TemplatedStruct<string> StringStruct;
